# MineSweeper-Flet

./: .gitignore  LICENSE  README.md  app.py  setup.cfg
src/minesweeper/: config.py  user_setting.py
src/minesweeper/game/: display.py  game.py  manage.py  square.py
src/minesweeper/ui/: event.py  view.py
