[metadata]
name = minesweeper with flet
version = 0.0.1
description = Minesweeper created using python flet package.
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT License

[options]
install_requires =
    flet
package_dir =
    =src
package = find:

[options.extras_require]
develop =
    flake8
    black
    isort